--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "axios": "^0.18.0",
     "react-redux": "^6.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
