Updated buttons for registration to use material design.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "react-redux": "^6.0.0",
     "react-scripts": "^2.1.8",
