--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "path": "^0.12.7",
+    "react-modal": "^3.8.1",
+    "react-sane-contenteditable": "^1.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url": "^0.11.0",
